--- a/Windows-MacOs/Windows-MacOs/Views/Canvas/_Canvas.cshtml
+++ b/Windows-MacOs/Windows-MacOs/Views/Canvas/_Canvas.cshtml
@@ -1,14 +1,14 @@
 ﻿<div style="position:absolute;">
-    <div style="width: 300px; height: 300px; border: 1px solid #d3d3d3; background: transparent; position: absolute; top: 48px; z-index: 2; ">
+    <div style="width: 300px; height: 300px;box-sizing: content-box; border: 1px solid #d3d3d3; background: transparent; position: absolute; top: 48px; z-index: 3; ">
         <canvas id="myCanvas" width="300" height="300" style="position: absolute; background: transparent;">
             YourbrowserdoesnotsupporttheHTML5canvastag.
         </canvas>
     </div>
-    <div style="width:300px; height:300px; border:1px solid transparent;position: absolute;top: 48px;z-index: 1;">
-        <div id="myContent" width="300" height="300" style="position: absolute; background: white;">
+    <div style="width: 300px; height: 300px;box-sizing: content-box; border: 1px solid transparent; position: absolute; top: 48px; z-index: 2;">
+        <div id="myContent" style="position: absolute; width: 300px; height: 300px; background: white;">
         </div>
     </div>
-    <div style="width:300px; height:300px; border:1px solid transparent;position: absolute;top: 48px;z-index: 1;visibility:hidden;">
+    <div style="width: 300px; height: 300px;box-sizing: content-box; border: 1px solid transparent; position: absolute; top: 48px; z-index: 1; visibility: hidden;">
         <svg id="mySVG" width="300" height="300" version="1.1" xmlns="http://www.w3.org/2000/svg" style="position: absolute; background: white;">
         </svg>
     </div>
