--- a/Windows-MacOs/Windows-MacOs/Views/Canvas/EditorTemplates/Menus.cshtml
+++ b/Windows-MacOs/Windows-MacOs/Views/Canvas/EditorTemplates/Menus.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<WinMacOs.Models.Manager.Canvas.MenuModel>
+﻿@model List<WinMacOs.CanvasMenuModel>
 <div id="cover"></div>
 <div id="datatable_inner" class="col-md-12" style="height:100%;">
     <table class="menu-datatable">
@@ -19,13 +19,10 @@
 <style>
     .menu {
         border: none;
-        /*font-weight: bold;*/
         cursor: pointer;
-        /*line-height: 1;*/
-        /*height: 60px;*/
-        /*width: 100%;*/
         text-align: left;
         color: #fff;
+        font-size: 14px;
     }
     .open-cover {
         position: fixed;
