--- a/Windows-MacOs/Windows-MacOs/Views/Canvas/Shared/_Layout.cshtml
+++ b/Windows-MacOs/Windows-MacOs/Views/Canvas/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/font-awesome/css")
     @*@Scripts.Render("~/bundles/modernizr")*@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/messages")
