--- a/Windows-MacOs/Windows-MacOs/Views/SQLCompare/_SQLCompare.cshtml
+++ b/Windows-MacOs/Windows-MacOs/Views/SQLCompare/_SQLCompare.cshtml
@@ -67,7 +67,7 @@
 </div>
 
 <script>
-    var getSQLScript = '@Url.Action("GetSQLScript")'
+    var getSQLScript = '@Url.Action("GetSQLScript", "manager/SQLCompare")'
 </script>
 <style>
     :root {
