--- a/Windows-MacOs/Windows-MacOs/Views/SQLCompare/_SQLCompare.cshtml
+++ b/Windows-MacOs/Windows-MacOs/Views/SQLCompare/_SQLCompare.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     @model WinMacOs.Models.Manager.SQLCompare.SQLCompareModel
-    ViewBag.Title = "Canvas";
+    ViewBag.Title = "SQL Compare";
 }
 <div class="title"><h2><i class="fa-solid fa-chevron-right"></i>SQL Compare</h2></div>
 <div>
