--- a/Windows-MacOs/Windows-MacOs/Views/SQLCompare/EditorTemplates/SQLScriptView.cshtml
+++ b/Windows-MacOs/Windows-MacOs/Views/SQLCompare/EditorTemplates/SQLScriptView.cshtml
@@ -27,14 +27,14 @@
         <tbody>
             @{ int index = -2; int idx = 0; }
             <tr data-group-index="@index" data-index="@idx" data-level="0" data-shouhin="0">
-                <td colspan="3" class="text-left">
-                    <div style="width: 500px;">@Html.DisplayFor(model => model.SQLScriptSource)</div>
+                <td colspan="3" class="w45 text-left">
+                    <div class="sql-data">@Html.DisplayFor(model => model.SQLScriptSource)</div>
                 </td>
                 <td class="text-center">
                     <i class="fas fa-arrow-right fa-xs color-green-0"></i>
                 </td>
-                <td colspan="4" class="text-left">
-                    <div style="width: 500px;">@Html.DisplayFor(model => model.SQLScriptTarget)</div>
+                <td colspan="4" class="w45 text-left">
+                    <div class="sql-data">@Html.DisplayFor(model => model.SQLScriptTarget)</div>
                 </td>
             </tr>
         </tbody>
@@ -46,4 +46,10 @@
     });
 </script>
 <style>
+    .sql-data {
+        width: 100%;
+        height: 300px;
+        overflow-y: auto;
+        text-wrap: wrap;
+    }
 </style>
